--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/whiteboard
-spring.datasource.username=root
-spring.datasource.password=mysqlroot
+spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-04.cleardb.net:3306/heroku_9ed5ea9f24b87ab
+spring.datasource.username=bc4acfec85c5eb
+spring.datasource.password=ef21848e
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
